# GRNG

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  ToDo.md
include/HierarchicalRNG/: hacid.hpp  hierarchical-rng.hpp  rayar.hpp  verification.hpp
scripts/: CMakeLists.txt  build-search.cpp  build.cpp  optimize.cpp  selectPivots.cpp  testResults.cpp
scripts/bashScripts/: run_batch.sh  run_fig28.sh  run_hacid.sh  run_optConsec.sh  run_optCorel1.sh  run_optSIFT.sh  run_rayar.sh  run_single.sh  run_uniform.sh
scripts/old_scripts/: hacid.cpp  optimize_consecutive.cpp  rayar.cpp
src/: CMakeLists.txt  hierarchical-rng.cpp
src/IncrementalBuild/IncrementalBuild/: CMakeLists.txt  brute-force.cpp  incremental-build.cpp  incremental-build.hpp  query-struct-incremental-build.hpp  stage0.cpp  stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp  stage5.cpp  stage6.cpp  stage7.cpp  stage8.cpp  stage9.cpp
src/IncrementalBuild/tests/: CMakeLists.txt  Test_IncrementalBuild.cpp  Test_IncrementalBuild.hpp  test_incremental-build.cpp
src/OfflineBuild/OfflineBuild/: CMakeLists.txt  offline-build.cpp  offline-build.hpp  query-struct-offline-build.hpp  stage0.cpp  stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp  stage5.cpp  stage6.cpp  stage7.cpp
src/OfflineBuild/OfflineBuild/PivotSelection/PivotSelection/: CMakeLists.txt  constant-radius-pivot-selection-struct.hpp  constant-radius-pivot-selection.cpp  constant-radius-pivot-selection.hpp  pivot-selection-struct.hpp
src/OfflineBuild/OfflineBuild/PivotSelection/tests/: CMakeLists.txt  test_pivot-selection.cpp
src/OfflineBuild/tests/: CMakeLists.txt  Test_OfflineBuild.cpp  Test_OfflineBuild.hpp  test_offline-build.cpp
src/OnlineSearch/OnlineSearch/: CMakeLists.txt  brute-force.cpp  online-search.cpp  online-search.hpp  query-struct-online-search.hpp  stage0.cpp  stage1.cpp  stage2.cpp  stage3.cpp  stage4.cpp  stage5.cpp  stage6.cpp
src/OnlineSearch/tests/: CMakeLists.txt  Test_OnlineSearch.cpp  Test_OnlineSearch.hpp  test_online-search.cpp
src/Optimization/Optimization/: CMakeLists.txt  hrng-data.hpp  hrng-results.hpp  optimization.cpp  optimization.hpp
src/Optimization/tests/: CMakeLists.txt  test_optimization.cpp
src/PivotLayerHierarchy/PivotLayerHierarchy/: CMakeLists.txt  index-pair-distance-struct.hpp  pivot-layer-hierarchy.cpp  pivot-layer-hierarchy.hpp  pivot-layer.cpp  pivot-layer.hpp  umax.cpp  vmax.cpp
src/PivotLayerHierarchy/tests/: CMakeLists.txt  Test-PivotLayer.cpp  Test-PivotLayer.hpp  Test-PivotLayerHierarchy.cpp  Test-PivotLayerHierarchy.hpp  test_pivot-layer-hierarchy.cpp  test_pivot-layer.cpp
src/SparseMatrix/SparseMatrix/: CMakeLists.txt  search-sparse-matrix-local.cpp  search-sparse-matrix-local.hpp  search-sparse-matrix.cpp  search-sparse-matrix.hpp  sparse-matrix-local.cpp  sparse-matrix-local.hpp  sparse-matrix.cpp  sparse-matrix.hpp
src/SparseMatrix/tests/: CMakeLists.txt  Test-SparseMatrix.cpp  Test-SparseMatrix.hpp  test-sparse-matrix.cpp
src/Utils/Utils/: CMakeLists.txt  index-distance-struct.hpp  links-map.hpp  memory-usage.cpp  memory-usage.h  rank-ordered-list.hpp  results-saver.hpp
src/tests/: Test-HierarchicalRNG.hpp  test-hierarchical-rng.cpp
